AC_PREREQ(2.61)

AC_INIT([i18n-test], [0.0.1], [mail@tinodidriksen.com])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX
AM_SANITY_CHECK
AC_LANG_CPLUSPLUS

CFLAGS="-Wall -Wextra $CFLAGS"
CXXFLAGS="-Wall -Wextra -std=c++1y $CXXFLAGS"

PKG_CHECK_MODULES([ICU_I18N], [icu-i18n])

CPPFLAGS="$CPPFLAGS $CFLAGS $ICU_CFLAGS $ICU_I18N_CFLAGS"
LIBS="$LIBS $ICU_LIBS $ICU_I18N_LIBS"

AC_LANG(C++)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
